chore[xxx] fixed sonarcloud issues